--- a/.github/workflows/deploy-rustdesk.yml
+++ b/.github/workflows/deploy-rustdesk.yml
@@ -33,12 +33,11 @@ jobs:
         with:
           terraform_version: '1.6.0'
 
-      - name: Install Terragrunt
-        run: |
-          sudo apt-get update && sudo apt-get install -y wget unzip
-          TG_VERSION=0.55.17
-          wget -qO /tmp/terragrunt.zip https://github.com/gruntwork-io/terragrunt/releases/download/v${TG_VERSION}/terragrunt_linux_amd64
-          sudo install -m 0755 /tmp/terragrunt.zip /usr/local/bin/terragrunt
+        - name: Install Terragrunt and OpenTofu
+          uses: gruntwork-io/terragrunt-action@v3
+          with:
+            tg_version: '0.91.3'
+            # If you want OpenTofu instead of Terraform, set tofu_version. We only need Terragrunt installed here.
 
       - name: Run Terragrunt Plan
         working-directory: infra/live/dev/rustdesk
@@ -79,12 +78,11 @@ jobs:
         with:
           terraform_version: '1.6.0'
 
-      - name: Install Terragrunt
-        run: |
-          sudo apt-get update && sudo apt-get install -y wget unzip
-          TG_VERSION=0.55.17
-          wget -qO /tmp/terragrunt.zip https://github.com/gruntwork-io/terragrunt/releases/download/v${TG_VERSION}/terragrunt_linux_amd64
-          sudo install -m 0755 /tmp/terragrunt.zip /usr/local/bin/terragrunt
+        - name: Install Terragrunt and OpenTofu
+          uses: gruntwork-io/terragrunt-action@v3
+          with:
+            tg_version: '0.91.3'
+            # If you want OpenTofu instead of Terraform, set tofu_version. We only need Terragrunt installed here.
 
       - name: Terragrunt Apply
         working-directory: infra/live/dev/rustdesk
