--- a/.github/workflows/deploy-rustdesk.yml
+++ b/.github/workflows/deploy-rustdesk.yml
@@ -33,13 +33,16 @@ jobs:
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
         with:
-          terraform_version: '1.6.0'
+          terraform_version: '1.9.0'
           terraform_wrapper: false
 
       - name: Install Terragrunt
-        uses: gruntwork-io/terragrunt-action@v3
-        with:
-          tg_version: '0.91.3'
+        run: |
+          TERRAGRUNT_VERSION="0.91.3"
+          curl -Lo terragrunt https://github.com/gruntwork-io/terragrunt/releases/download/v${TERRAGRUNT_VERSION}/terragrunt_linux_amd64
+          chmod +x terragrunt
+          sudo mv terragrunt /usr/local/bin/
+          terragrunt --version
 
       - name: Terragrunt Format Check
         working-directory: infra/live/dev/rustdesk
@@ -140,13 +143,16 @@ jobs:
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
         with:
-          terraform_version: '1.6.0'
+          terraform_version: '1.9.0'
           terraform_wrapper: false
 
       - name: Install Terragrunt
-        uses: gruntwork-io/terragrunt-action@v3
-        with:
-          tg_version: '0.91.3'
+        run: |
+          TERRAGRUNT_VERSION="0.91.3"
+          curl -Lo terragrunt https://github.com/gruntwork-io/terragrunt/releases/download/v${TERRAGRUNT_VERSION}/terragrunt_linux_amd64
+          chmod +x terragrunt
+          sudo mv terragrunt /usr/local/bin/
+          terragrunt --version
 
       - name: Download Plan Artifact
         uses: actions/download-artifact@v4
