fixed wrapper error

--- a/.github/workflows/deploy-rustdesk.yml
+++ b/.github/workflows/deploy-rustdesk.yml
@@ -39,7 +39,7 @@ jobs:
         uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: ${{ env.TF_VERSION }}
-          terraform_wrapper: false
+          terraform_wrapper: true
 
       - name: Install Terragrunt
         uses: gruntwork-io/terragrunt-action@v3
@@ -149,7 +149,7 @@ jobs:
         uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: ${{ env.TF_VERSION }}
-          terraform_wrapper: false
+          terraform_wrapper: true
 
       - name: Install Terragrunt
         uses: gruntwork-io/terragrunt-action@v3
