--- a/.github/workflows/deploy-rustdesk.yml
+++ b/.github/workflows/deploy-rustdesk.yml
@@ -15,8 +15,6 @@ permissions:
   pull-requests: write
 
 env:
-  TG_VERSION: '0.91.3'
-  TF_VERSION: '1.9.0'
   WORKING_DIR: 'infra/live/dev/rustdesk'
 
 jobs:
@@ -35,16 +33,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v3
-        with:
-          terraform_version: ${{ env.TF_VERSION }}
-          terraform_wrapper: false
-
-      - name: Install Terragrunt
+      - name: Install Terragrunt and Terraform
         uses: gruntwork-io/terragrunt-action@v3
         with:
-          tg_version: ${{ env.TG_VERSION }}
           tf_path: 'terraform'
 
       - name: Terragrunt Format Check
@@ -145,16 +136,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v3
-        with:
-          terraform_version: ${{ env.TF_VERSION }}
-          terraform_wrapper: false
-
-      - name: Install Terragrunt
+      - name: Install Terragrunt and Terraform
         uses: gruntwork-io/terragrunt-action@v3
         with:
-          tg_version: ${{ env.TG_VERSION }}
           tf_path: 'terraform'
 
       - name: Download Plan Artifact
